--- a/index.html
+++ b/index.html
@@ -63,25 +63,25 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </demo-snippet>
 
     <demo-snippet title="Custom Styles">
-      <style is="custom-style">
-        paper-checkbox.blue {
-          --paper-checkbox-checked-color: var(--paper-light-blue-500);
-          --paper-checkbox-checked-ink-color: var(--paper-light-blue-500);
-          --paper-checkbox-unchecked-color: var(--paper-light-blue-900);
-          --paper-checkbox-unchecked-ink-color: var(--paper-light-blue-900);
-          --paper-checkbox-label-color: var(--paper-light-blue-500);
-        }
-        paper-checkbox.red {
-          --paper-checkbox-checked-color: var(--paper-red-500);
-          --paper-checkbox-checked-ink-color: var(--paper-red-500);
-          --paper-checkbox-unchecked-color: var(--paper-red-900);
-          --paper-checkbox-unchecked-ink-color: var(--paper-red-900);
-          --paper-checkbox-label-color: var(--paper-red-500);
-        }
-      </style>
-
-      <paper-checkbox class="blue">Checkbox</paper-checkbox>
-      <paper-checkbox checked class="red">Checkbox</paper-checkbox>
+<!-- the markdown parser doesn't deal well if the <style> is indented -->
+<paper-checkbox class="blue">Checkbox</paper-checkbox>
+<paper-checkbox checked class="red">Checkbox</paper-checkbox>
+<style is="custom-style">
+  paper-checkbox.blue {
+    --paper-checkbox-checked-color: var(--paper-light-blue-500);
+    --paper-checkbox-checked-ink-color: var(--paper-light-blue-500);
+    --paper-checkbox-unchecked-color: var(--paper-light-blue-900);
+    --paper-checkbox-unchecked-ink-color: var(--paper-light-blue-900);
+    --paper-checkbox-label-color: var(--paper-light-blue-500);
+  }
+  paper-checkbox.red {
+    --paper-checkbox-checked-color: var(--paper-red-500);
+    --paper-checkbox-checked-ink-color: var(--paper-red-500);
+    --paper-checkbox-unchecked-color: var(--paper-red-900);
+    --paper-checkbox-unchecked-ink-color: var(--paper-red-900);
+    --paper-checkbox-label-color: var(--paper-red-500);
+  }
+</style>
     </demo-snippet>
   </body>
 </html>
