--- a/demo-snippet.html
+++ b/demo-snippet.html
@@ -15,6 +15,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <!--
+This is a demo-and-code-snippet Voltron element, to make demos friendlier for users.
+It's meant to render a snippet of code, and display its source in the simplest way possible.
+
 For example:
 
     <demo-snippet>
@@ -28,10 +31,6 @@ The following custom properties and mixins are available for styling:
 
 Custom property | Description | Default
 ----------------|-------------|----------
-`demo-snippet-header-background-color` | Background color of the header| `--paper-teal-500`
-`demo-snippet-header-color` | Header text color| `white`
-`--demo-snippet` | Mixin applied to the entire element | `{}`
-`--demo-snippet-header` | Mixin applied to the title header | `{}`
 `--demo-snippet-demo` | Mixin applied to the demo section | `{}`
 `--demo-snippet-code` | Mixin applied to the code section | `{}`
 -->
