--- a/demo-snippet.html
+++ b/demo-snippet.html
@@ -15,8 +15,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
 <!--
-This is simple element that will render both the code of a demo snippet, as
-well as the rendered demo. It can be used for both native elements and
+This is simple element that will render both the source and demo of a
+code snippet. It can be used for both native elements and
 Polymer elements.
 
 Example of a native element demo
